--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
+.container {
+  max-width: 1100px;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+.btn-primary, .btn-secondary {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 8px 20px;
+  margin: 3px;
+}
+
+.btn-primary:hover, .btn-secondary:hover {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+
+.btn-primary {
+  background-color: #0e6cff;
+}
+
+.btn-secondary {
+  background-color: #ff8700;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -9,6 +36,14 @@ body {
   background-color: #f4f4f4;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 .showcase {
@@ -45,7 +80,7 @@ body {
 }
 
 .showcase a {
-  color: set-text-color(#0e6cff);
+  color: #fff;
 }
 
 .showcase-content {
@@ -72,12 +107,5 @@ body {
 
 .showcase-content p {
   margin: 20px 0;
-}
-
-.container {
-  max-width: 1100px;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
 }
 /*# sourceMappingURL=style.css.map */
