sass mixin , functions implementation

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+}
+
 .container {
   max-width: 1100px;
   padding: 0 30px;
@@ -18,11 +24,13 @@
 }
 
 .btn-primary {
-  background-color: #0e6cff;
+  background-color: white;
+  color: #333;
 }
 
 .btn-secondary {
   background-color: #ff8700;
+  color: #fff;
 }
 
 * {
@@ -30,12 +38,6 @@
           box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  background-color: #f4f4f4;
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.6;
 }
 
 img {
@@ -47,8 +49,8 @@ a {
 }
 
 .showcase {
-  background-color: #0e6cff;
-  color: #fff;
+  background-color: #e0ffff;
+  color: #333;
   height: 600px;
 }
 
@@ -75,12 +77,12 @@ a {
   padding: 15px;
 }
 
-.showcase nav a:hover {
-  color: #ff8700;
+.showcase nav a {
+  color: #333;
 }
 
-.showcase a {
-  color: #fff;
+.showcase nav a:hover {
+  color: #ff8700;
 }
 
 .showcase-content {
