--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,83 @@
+.m-1 {
+  margin: 1rem;
+}
+
+.my-1 {
+  margin: 1rem 0;
+}
+
+.p-1 {
+  padding: 1rem 0;
+}
+
+.py-1 {
+  padding: 1rem 0;
+}
+
+.m-2 {
+  margin: 2rem;
+}
+
+.my-2 {
+  margin: 2rem 0;
+}
+
+.p-2 {
+  padding: 2rem 0;
+}
+
+.py-2 {
+  padding: 2rem 0;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.my-3 {
+  margin: 3rem 0;
+}
+
+.p-3 {
+  padding: 3rem 0;
+}
+
+.py-3 {
+  padding: 3rem 0;
+}
+
+.m-4 {
+  margin: 4rem;
+}
+
+.my-4 {
+  margin: 4rem 0;
+}
+
+.p-4 {
+  padding: 4rem 0;
+}
+
+.py-4 {
+  padding: 4rem 0;
+}
+
+.m-5 {
+  margin: 5rem;
+}
+
+.my-5 {
+  margin: 5rem 0;
+}
+
+.p-5 {
+  padding: 5rem 0;
+}
+
+.py-5 {
+  padding: 5rem 0;
+}
+
 body {
   background-color: #f4f4f4;
   font-family: Arial, Helvetica, sans-serif;
@@ -24,8 +104,8 @@ body {
 }
 
 .btn-primary {
-  background-color: white;
-  color: #333;
+  background-color: #418bff;
+  color: #fff;
 }
 
 .btn-secondary {
@@ -49,8 +129,8 @@ a {
 }
 
 .showcase {
-  background-color: #e0ffff;
-  color: #333;
+  background-color: #0e6cff;
+  color: #fff;
   height: 600px;
 }
 
@@ -78,7 +158,7 @@ a {
 }
 
 .showcase nav a {
-  color: #333;
+  color: #fff;
 }
 
 .showcase nav a:hover {
@@ -105,9 +185,5 @@ a {
 .showcase-content h1 {
   font-size: 50px;
   line-height: 1.2;
-}
-
-.showcase-content p {
-  margin: 20px 0;
 }
 /*# sourceMappingURL=style.css.map */
