--- a/css/style.css
+++ b/css/style.css
@@ -186,4 +186,16 @@ a {
   font-size: 50px;
   line-height: 1.2;
 }
+
+@media (max-width: 700px) {
+  .showcase {
+    height: 400px;
+  }
+  .showcase-content {
+    text-align: center;
+  }
+  .showcase-content img {
+    display: none;
+  }
+}
 /*# sourceMappingURL=style.css.map */
